<resources>
    <string name="app_name">Muse</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="exit_prompt_message">Are you sure you want to go back?</string>

    <string name="music_recogniser_menu_item_title">Music Recogniser</string>
    <string name="profile_menu_item_title">Profile</string>
    <string name="about_menu_item_title">About</string>
    <string name="help_menu_item_title">Help</string>

    <string name="intro_screen_text">Hello, trying to recognise \nsome music files?</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Signup</string>

    <string name="email_prompt_text">Email</string>
    <string name="password_prompt_text">Password</string>
    <string name="first_name_prompt_text">First Name</string>
    <string name="last_name_prompt_text">Last Name</string>
    <string name="confirm_password_prompt_text">Confirm Password</string>
    <string name="phone_number_prompt_text">Phone Number</string>
    <string name="gender_prompt_text">Gender</string>
    <string-array name="genders">
        <item />
        <item>M</item>
        <item>F</item>
    </string-array>

    <string name="login_prompt_text">Login to your \nAccount</string>
    <string name="signup_prompt_text">Create your \nAccount</string>
    <string name="forgot_password_prompt_text">Forgot password?</string>
    <string name="signup_alternative_option_text">Don\'t have an account? Signup</string>
    <string name="login_alternative_option_text">Already have an account? Login</string>

    <string name="valid_first_name_hint_text">First name is valid</string>
    <string name="valid_last_name_hint_text">Last name is valid</string>
    <string name="valid_email_address_hint_text">Email address is valid</string>
    <string name="confirmed_password_hint_text">Password has been confirmed</string>
    <string name="valid_phone_number_hint_text">Phone number is valid</string>
    <string name="valid_gender_hint_text">A gender has been selected</string>

    <string name="invalid_first_name_hint_text">
        Please enter your first name. \nFirst names can only contain letters
    </string>
    <string name="invalid_last_name_hint_text">
        Please enter your last name. \nLast names can only contain letters
    </string>
    <string name="invalid_email_address_hint_text">Please enter a valid email address</string>
    <string name="uppercase_password_hint_text">Password should have at least one uppercase</string>
    <string name="lowercase_password_hint_text">Password should have at least one lowercase</string>
    <string name="digit_password_hint_text">Password should have at least one digit</string>
    <string name="password_length_hint_text">
        Password should have at least 8 characters and cannot have more than 20 characters
    </string>
    <string name="unconfirmed_password_hint_text">Please re-enter your password</string>
    <string name="invalid_phone_number_hint_text">
        Please enter a valid phone number. \nA valid phone number should follow the format: 08012345678
    </string>
    <string name="invalid_gender_hint_text">Please select your gender</string>

    <string name="signup_progress_text">Attempting to signup,\nplease wait</string>
    <string name="login_progress_text">Attempting to login,\nplease wait</string>

    <string name="no_internet_connection_message">
        Please ensure you are connected to the internet\nwhile trying to %1$s
    </string>

    <string name="poor_internet_connection_message">
        Poor internet connection detected. \nPlease retry with stronger internet connection
    </string>

    <string name="signup_success_message">Signup was successful. You may now proceed to login</string>
    <string name="login_success_message">Login was successful. You may now proceed to recognise songs</string>

    <string name="select_music_files_prompt_text">Select Music Files</string>
    <string name="identify_music_files_prompt_text">Identify Music Files</string>
    <string name="confirm_music_files_prompt_text">Confirm Recognition</string>
    <string name="clear_music_files_prompt_text">Remove Selected Music Files</string>

    <string name="user_profile_text">User Profile</string>
    <string name="user_id_text">User ID</string>
    <string name="full_name_text">Full Name</string>
    <string name="current_subscription_text">Current Subscription</string>
    <string name="previous_subscriptions_text">Previous Subscriptions</string>

    <string name="profile_progress_text">Loading user profile</string>

    <string name="no_active_subscription_message">You do not have\n any active subscription</string>

    <string name="subscription_id_text">Subscription ID</string>
    <string name="transaction_reference_text">Transaction Reference</string>
    <string name="subscription_plan_text">Subscription Plan</string>
    <string name="number_of_recognised_songs_text">Number of Recognised Songs</string>
    <string name="number_of_songs_left_text">Number of Songs Left</string>
    <string name="subscription_date_text">Subscription Date</string>
    <string name="price_paid_text">Price Paid</string>

    <string name="refresh_text">Refresh</string>

    <string name="pay_subscription_text">Pay Subscription</string>

    <string name="subscription_selection_intro_text">To use this app, a subscription plan is required. \nPlease select a subscription plan below</string>
    <string name="price_text">Price</string>
    <string name="number_of_songs_text">Number of Songs</string>

    <string name="select_subscription_text">Select Plan</string>
    <string name="subscription_plans_progress_text">Loading subscription plans</string>

    <string name="card_details_text">Card Details</string>
    <string name="card_expiry_hint">Card Expiry Date</string>
    <string name="card_number_hint">Card Number</string>
    <string name="card_cvv_hint">Card CVV</string>

    <string name="pay_subscription_button_text">Pay %1$s</string>
    <string name="test_card_number">4084084084084081</string>
    <string name="test_card_expiry_date">10/23</string>
    <string name="test_cvv">408</string>

    <string name="subscription_payment_progress_text">Attempting to pay subscription,\nplease wait</string>

    <string name="payment_error_message">
        Sorry, an error occurred while trying to pay subscription. \nPlease ensure you have a strong internet connection
    </string>

    <string name="subscription_payment_success_message">Subscription payment was successful. You may now proceed to recognise songs</string>
    
    <string name="music_files_selection_limit_text">You have selected more songs than you have left in your subscription plan. \nPlease select %1$d songs or less.</string>
    
    <string name="music_title_text">Title</string>
    <string name="music_artist_text">Artist(s)</string>
    <string name="music_album_text">Album</string>
    <string name="music_genre_text">Genre(s)</string>
    <string name="music_year_text">Year</string>
    <string name="play_button_text">Play</string>
    <string name="remove_button_text">Remove</string>

    <string name="music_recogniser_progress_text">Attempting to perform music recognition,\nplease wait</string>
    <string name="confirm_recognition_progress_text">Attempting to update music files with metadata \nobtained from music recognition,\nplease wait</string>

    <plurals name="successful_confirmation_message">
        <item quantity="one">
            %1d song was successfully updated with metadata obtained from music recognition
        </item>
        <item quantity="other">
            %1d songs were successfully updated with metadata obtained from music recognition
        </item>
    </plurals>
    
    <string name="confirmation_permission_message">
        Please, grant permission to use this folder: Music/Muse in your internal storage
    </string>

    <string name="confirmation_permission_not_granted_message">
        Sorry, you have not granted permission to use the Muse folder
    </string>
    
    <string name="no_file_selected_for_confirmation_message">
        Sorry, you have either not selected any file for recognition confirmation or no song was
        successfully recognised
    </string>
</resources>