<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/card_details_prompt_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:text="@string/card_details_text"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/card_number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/card_number_hint"
        android:inputType="number"
        android:text="@string/test_card_number"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_details_prompt_text_view" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/card_expiry_date_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/card_expiry_hint"
        android:text="@string/test_card_expiry_date"
        android:inputType="text"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/card_number_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/card_cvv_edit_text"/>
        
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/card_cvv_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/card_cvv_hint"
        android:text="@string/test_cvv"
        android:inputType="number"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/card_number_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/card_expiry_date_edit_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pay_subscription_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>