<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signup_prompt_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_prompt_text"
            android:gravity="start"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/signup_inputs_layout"/>

        <LinearLayout
            android:id="@+id/signup_inputs_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/signup_prompt_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/signup_button">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/signup_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_prompt_text"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="10dp" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/signup_email_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/invalid_email_address_hint_text"
                android:clickable="false"
                android:enabled="false"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/signup_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_prompt_text"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/signup_uppercase_password_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/uppercase_password_hint_text"
                android:clickable="false"
                android:enabled="false"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/signup_lowercase_password_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/lowercase_password_hint_text"
                android:clickable="false"
                android:enabled="false"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/signup_digit_password_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/digit_password_hint_text"
                android:clickable="false"
                android:enabled="false"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/signup_password_length_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/password_length_hint_text"
                android:clickable="false"
                android:enabled="false"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_button_text"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintTop_toBottomOf="@+id/signup_inputs_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/login_alternative_text_view"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_alternative_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_alternative_option_text"
            android:gravity="center"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/signup_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>