<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_prompt_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_prompt_text"
            android:gravity="start"
            android:textSize="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/login_inputs_layout"/>

        <LinearLayout
            android:id="@+id/login_inputs_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/login_prompt_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/login_button_layout">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="10dp"
                android:hint="@string/email_prompt_text"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"
                android:hint="@string/password_prompt_text"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/login_inputs_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/signup_alternative_text_view">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button_text"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login_forgot_password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_prompt_text"
                android:layout_gravity="center"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signup_alternative_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_alternative_option_text"
            android:gravity="center"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/login_button_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>