<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/select_music_files_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:text="@string/select_music_files_prompt_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/identify_music_files_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:enabled="false"
                android:text="@string/identify_music_files_prompt_text" />

            <LinearLayout
                android:id="@+id/music_recogniser_progress_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/music_recogniser_progress_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:text="@string/music_recogniser_progress_text"
                    android:textAlignment="center" />

                <ProgressBar
                    android:id="@+id/music_recogniser_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true" />
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/confirm_recognition_floating_action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/confirm_music_files_prompt_text"
                app:fabSize="normal" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clear_music_files_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:enabled="false"
                android:text="@string/clear_music_files_prompt_text" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/music_files_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>