<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/intro_screen_text"
        style="@style/MuseHeaderTextView"
        android:layout_margin="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/access_buttons_layout"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/access_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/intro_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/intro_signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_button_text"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="20dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
