<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profile_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_profile_text"
        android:textAlignment="center"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profile_full_name_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name_text"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/profile_full_name_text_view"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profile_full_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name_text"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_text_view"
        app:layout_constraintStart_toEndOf="@id/profile_full_name_title_text_view"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profile_user_id_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_id_text"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_full_name_title_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/profile_user_id_text_view"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profile_user_id_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_id_text"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_full_name_text_view"
        app:layout_constraintStart_toEndOf="@id/profile_gender_title_text_view"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profile_gender_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_prompt_text"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_user_id_title_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/profile_gender_text_view"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profile_gender_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_prompt_text"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_user_id_text_view"
        app:layout_constraintStart_toEndOf="@id/profile_gender_title_text_view"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profile_email_address_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_prompt_text"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_gender_title_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/profile_email_address_text_view"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profile_email_address_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_prompt_text"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_gender_text_view"
        app:layout_constraintStart_toEndOf="@id/profile_email_address_title_text_view"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profile_phone_number_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_prompt_text"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_email_address_title_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/profile_email_address_text_view"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profile_phone_number_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_prompt_text"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_email_address_text_view"
        app:layout_constraintStart_toEndOf="@id/profile_email_address_title_text_view"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profile_current_subscription_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_subscription_text"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_phone_number_title_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/profile_email_address_text_view"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profile_current_subscription_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_subscription_text"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_phone_number_text_view"
        app:layout_constraintStart_toEndOf="@id/profile_email_address_title_text_view"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/previous_subscriptions_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_subscriptions_text"
        android:textAlignment="center"
        android:layout_marginVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
